# LineAdmin

./: .env.example  .gitignore  Cargo.toml  README.md  tauri.conf.json
.github/workflows/: build.yml
migrations/: 001_init.sql
src/: commands.rs  main.rs
src/analytics/: mod.rs
src/api/: line_client.rs  line_webhook.rs  mod.rs
src/db/: mod.rs  models.rs
src/integrations/: airtable.rs  google_sheets.rs  mod.rs  notion.rs
src/notification/: mod.rs
src/scheduler/: calendar_reminder.rs  mod.rs
