[package]
name = "line_admin_app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tauri
tauri = { version = "2.1", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web Server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }

# HTTP Client (for LINE/Slack APIs)
reqwest = { version = "0.12", features = ["json"] }

# Scheduling
tokio-cron-scheduler = "0.13"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto (for LINE signature verification)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Additional utilities
dirs = "5.0"
tauri-plugin-shell = "2.1"
async-trait = "0.1"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }
